--- a/Docker/plusFlix/backend/templates/admin/categories.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/categories.html.twig
@@ -1,56 +1,56 @@
 {% extends "admin/base.html.twig" %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/admin/admin.categories.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/admin/admin.page.css') }}">
 {% endblock %}
 
 {% block body %}
-<div id="categories">
-    <div class="categories-heading">
-        <h1>Kategorie&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" id="addCategoryBtn">+</a></h1>
+<div id="main_content">
+    <div class="heading">
+        <h1>Kategorie&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" id="addBtn">+</a></h1>
     </div>
-
 
     <input class="input-research" type="text" placeholder="Szukaj">
 
     <div id="table-wraper">
-    <table class="admin-categories-table">
-        <thead>
-            <tr>
-                <th>Nazwa kategorii</th>
-                <th>Liczba powiązanych dzieł</th>
-                <th>Akcje</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for category in categories %}
+        <table class="admin-table">
+            <thead>
                 <tr>
-                    <td>{{ category.genre }}</td>
-                    <td id="td-action">{{ category.item_count}}</td>
-                    <td id="td-action">
-                        <a href="#" class="editCategoryBtn"
-                        data-id="{{ category.cat_ID }}"
-                        data-name="{{ category.genre }}">EDYTUJ</a>
-                        <span class="action-separator">|</span>
-                        <a href="#"
-                            class="deleteCategoryLink"
-                            data-id="{{ category.cat_ID }}">USUŃ</a>
-                    </td>
+                    <th>Nazwa kategorii</th>
+                    <th>Liczba powiązanych dzieł</th>
+                    <th>Akcje</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for category in categories %}
+                    <tr>
+                        <td>{{ category.genre }}</td>
+                        <td>{{ category.item_count}}</td>
+                        <td>
+                            <a href="#" class="editCategoryBtn"
+                            data-id="{{ category.cat_ID }}"
+                            data-name="{{ category.genre }}">EDYTUJ</a>
+                            <span class="action-separator">|</span>
+                            <a href="#"
+                                class="deleteCategoryLink"
+                                data-id="{{ category.cat_ID }}">USUŃ</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
-
 
     {% include 'admin/commonModal.html.twig' with {
         modal_type: 'categoryModal',
+        modal_title: 'Nazwa Kategori',
+        name_field: 'genre',
+        form_action: path('admin_category_add'),
     }%}
-
 </div>
 
-    {% block script %}
-        <script src="{{ asset('js/admin/admin.commonModal.js') }}"></script>
-    {% endblock %}
+{% block script %}
+    <script src="{{ asset('js/admin/admin.categoriesModal.js') }}"></script>
+{% endblock %}
 
 {% endblock %}
