--- a/Docker/plusFlix/backend/public/css/admin/admin.itemModal.css
+++ b/Docker/plusFlix/backend/public/css/admin/admin.itemModal.css
@@ -14,10 +14,10 @@
     display: flex;
     flex-direction: column;
     background: #fff;
-    width: 400px;
-    top: 20%;
+    width: 1200px;
+    top: 10%;
     left: 40%;
-    transform: translate(-200px);
+    transform: translate(-400px);
     border-radius: 6px;
     padding: 0.5em 2em;
     margin: 0;
@@ -44,6 +44,15 @@
     flex-direction: column;
 }
 
+.inputs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 4em;
+    column-gap: 1em;                  /* spacing between columns */
+    row-gap: 1em;                     /* spacing between rows */
+    align-items: start;
+}
+
 .inputs p {
     font-weight: bold;
     font-size: 24px;
@@ -62,6 +71,7 @@
 }
 
 #modal-submit-btn {
+    margin-top: 40px;
     width: 100%;
     max-width: 80px;
     padding: 7px 6px;
@@ -75,4 +85,42 @@
 
 #modal-submit-btn:hover {
     background-color: #364353;
+}
+
+.form_input_container {
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+}
+
+#typeInput {
+    margin-top: 10px;
+    border: 1px solid #707070;
+    border-radius: 5px;
+    padding: 7px 6px;
+    margin-bottom: 40px;
+    background-color: #fafafa;
+    width: 100%;
+    max-width: 405px;
+}
+
+.pills-container {
+    display: flex;
+    overflow: scroll;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    gap: 6px;
+    max-width: 405px;
+}
+
+.pill {
+    padding: 6px 10px;
+    background: #eee;
+    border-radius: 20px;
+    cursor: pointer;
+    white-space: nowrap;
+}
+.pill.active {
+    background: #3498db;
+    color: white;
 }
