--- a/Docker/plusFlix/backend/templates/public/home/index.html.twig
+++ b/Docker/plusFlix/backend/templates/public/home/index.html.twig
@@ -12,15 +12,19 @@
 
     <form action="/search" method="GET" class="nav-search">
         <div class="search-bar">
-            <input name="q" type="text" placeholder="Szukaj...">
+            <input name="name" type="text" placeholder="Szukaj...">
             <button class="search-btn">
                 <img src="https://cdn-icons-png.flaticon.com/256/2866/2866321.png" alt="search">
             </button>
         </div>
     </form>
 
-
     <div id="suggestions" class="suggestions"></div>
+</div>
+
+<div id="buttons">
+    <a href="/search">Wszystkie</a>
+    <a href="/favorites">Ulubione</a>
 </div>
 
 <div class="streaming-logos-section">
