--- a/Docker/plusFlix/backend/templates/search/base.html.twig
+++ b/Docker/plusFlix/backend/templates/search/base.html.twig
@@ -17,7 +17,7 @@
     <div class="nav-center">
         <div class="nav-search">
             <form action="/search" method="GET" class="nav-search">
-                <input name="q" type="text" placeholder="Szukaj...">
+                <input name="name" type="text" placeholder="Szukaj...">
                 <button>
                     <img src="https://cdn-icons-png.flaticon.com/256/2866/2866321.png" alt="search">
                 </button>
