--- a/Docker/plusFlix/backend/templates/search/results.html.twig
+++ b/Docker/plusFlix/backend/templates/search/results.html.twig
@@ -64,15 +64,15 @@
             <div class="sort-box">
                 <label><h2>Sortuj wg: </h2></label>
                 <select>
-                    <option>Popularność</option>
                     <option>Alfabetycznie</option>
+                    <option>Popularność</option>
                     <option>Rok produkcji (najnowsze)</option>
                 </select>
             </div>
         </div>
 
         <div class="results-grid">
-            {% for item in results %}
+            {% for item in items %}
                 <div class="result-card">
                     <button class="fav-btn" data-id="{{ item.id }}">★</button>
 
